monticore-generator/src/test/resources/cocos/invalid/A4018/A4018.mc4
package cocos.invalid.A4018;

grammar A4018 {

  A = ["`"];

}
